--- a/admin/docker-compose.yml
+++ b/admin/docker-compose.yml
@@ -11,6 +11,13 @@ services:
       - .:/app
     depends_on:
       - db
+  
+  queue:
+    build: .
+    # dockerfile: Dockerfile
+    command: 'python consumer.py'
+    depends_on:
+      - db
   db:
     image: mysql:8.3.0
     container_name: mysql-db
