--- a/main/docker-compose.yml
+++ b/main/docker-compose.yml
@@ -16,6 +16,11 @@ services:
       - FLASK_ENV=development
     command: flask run --host=0.0.0.0 --port=8000
 
+  queue:
+    build: .
+    command: 'python consumer.py'
+    depends_on:
+      - db
   db:
     image: mysql:8.0  
     container_name: mysql-db-2
